# noresm-temp-docs

./: 404.html  README.md  TODOs.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: docs.yml
docs/: .pages  index.md
docs/episode/: purpose.md  set-up.md
docs/user-guide/: .pages  advanced-customisation.md  citation.md  faq.md  first-time.md  index.md  modelling-best-practices.md  quick-start.md  user-guide.md
docs/user-guide/installation/: .pages  faq.md  first-time.md  remove-platform.md
episode/lectures/annotations-examples/: index.html
episode/lectures/code-examples/: index.html
episode/lectures/hands-on/: index.html
episode/lectures/icons/: index.html
episode/lectures/image-examples/: index.html
episode/purpose/: index.html
episode/set-up/: index.html
search/: search_index.json
user-guide/: index.html
user-guide/advanced-customisation/: index.html
user-guide/citation/: index.html
user-guide/faq/: index.html
user-guide/first-time/: index.html
user-guide/modelling-best-practices/: index.html
user-guide/quick-start/: index.html
